vlib/v/checker/tests/method_op_err.out
vlib/v/checker/tests/method_op_err.vv:11:1: error: operator methods should have exactly 1 argument
    9 | }
   10 | 
   11 | fn (u User) + () {
      | ~~~~~~~~~~~~~~~~
   12 | }
   13 |
vlib/v/checker/tests/method_op_err.vv:14:1: error: both sides of an operator must be the same type
   12 | }
   13 | 
   14 | fn (u User) - (f Foo) User {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~
   15 |     return User{u.a - f.a, u.b-f.a}
   16 | }
vlib/v/checker/tests/method_op_err.vv:18:1: error: operator comparison methods should return `bool`
   16 | }
   17 | 
   18 | fn (u User) > (u1 User) User {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   19 |     return User{}
   20 | }
vlib/v/checker/tests/method_op_err.vv:22:9: error: receiver cannot be `mut` for operator overloading
   20 | }
   21 | 
   22 | fn (mut u User) * (u1 User) User {
      |         ~~~~~~
   23 |     return User{}
   24 | }
vlib/v/checker/tests/method_op_err.vv:26:1: error: argument cannot be `mut` for operator overloading
   24 | }
   25 | 
   26 | fn (u User) / (mut u1 User) User {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   27 |     return User{}
   28 | }
vlib/v/checker/tests/method_op_err.vv:32:24: error: infix expr: cannot use `Foo` (right expression) as `User`
   30 | fn main() {
   31 |     println(User{3, 4})
   32 |     println(User{3, 4} - Foo{3, 3})
      |                        ^
   33 |     println(User{3, 2} < User{2, 4})
   34 |     println(User{3, 4} < Foo{3, 4})
vlib/v/checker/tests/method_op_err.vv:33:24: error: operation `User` < `User` does not exist, please define it
   31 |     println(User{3, 4})
   32 |     println(User{3, 4} - Foo{3, 3})
   33 |     println(User{3, 2} < User{2, 4})
      |                        ^
   34 |     println(User{3, 4} < Foo{3, 4})
   35 | }
vlib/v/checker/tests/method_op_err.vv:34:24: error: mismatched types `User` and `Foo`
   32 |     println(User{3, 4} - Foo{3, 3})
   33 |     println(User{3, 2} < User{2, 4})
   34 |     println(User{3, 4} < Foo{3, 4})
      |                        ^
   35 | }
